--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="branches">
+        <item>1.6.0dev</item>
         <item>1.5.0dev</item>
         <item>1.4.0dev</item>
         <item>1.3.0dev</item>
